9512
The caret is fixed in both scalac and repl.
{code}
scala> class Y extends X
<console>:12: error: overloaded method constructor X with alternatives:
  (i: Int)X <and>
  (i: Int,j: Int)X
 cannot be applied to ()
       class Y extends X
                       ^
{code}
The question about the empty parens is due to parens always supplied for ctor versus application.
